--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -86,7 +86,6 @@ jobs:
   ####################
   # Windows
   ####################
-  ############################
 
   Windows:
     runs-on: windows-2019
@@ -96,8 +95,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [Debug]
-        static: [OFF]
+        config: [Release]
+        static: [ON, OFF]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v1
@@ -118,7 +117,6 @@ jobs:
 
       - name: Prepare sccache
         run: |
-          # scoop update
           Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
           scoop install sccache --global
           # Scoop modifies the PATH so we make the modified PATH global.
@@ -126,14 +124,11 @@ jobs:
 
         # We run configure + build in the same step, since they both need to call VsDevCmd
         # Also, cmd uses ^ to break commands into multiple lines (in powershell this is `)
-        #Modification used for self-hosted builds:  
-          # call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\Tools\VsDevCmd.bat" -arch=x64
       - name: Configure and build
         shell: cmd
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x64
           cmake -G Ninja -V ^
-            -DCMAKE_PREFIX_PATH="C:\Users\mish\Documents\boost_1_72_0" ^
             -DCMAKE_CXX_COMPILER_LAUNCHER=sccache ^
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} ^
             -DLIBIGL_USE_STATIC_LIBRARY=${{ matrix.static }} ^
@@ -145,58 +140,4 @@ jobs:
 
       - name: Tests
         run: cd build; ctest --verbose
-
-  # Windows:
-  #   runs-on: windows-2019
-  #   env:
-  #     CC: cl.exe
-  #     CXX: cl.exe
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       config: [Release]
-  #       static: [ON, OFF]
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v1
-  #       with:
-  #         fetch-depth: 1
-  #     - uses: seanmiddleditch/gha-setup-ninja@master
-
-  #       # https://github.com/actions/cache/issues/101
-  #     - name: Set env
-  #       run: echo "::set-env name=appdata::$($env:LOCALAPPDATA)"
-
-  #     - name: Cache build
-  #       id: cache-build
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ${{ env.appdata }}\Mozilla\sccache
-  #         key: ${{ runner.os }}-${{ matrix.config }}-${{ matrix.static }}-cache
-
-  #     - name: Prepare sccache
-  #       run: |
-  #         Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-  #         scoop install sccache --global
-  #         # Scoop modifies the PATH so we make the modified PATH global.
-  #         echo "::set-env name=PATH::$env:PATH"
-
-  #       # We run configure + build in the same step, since they both need to call VsDevCmd
-  #       # Also, cmd uses ^ to break commands into multiple lines (in powershell this is `)
-  #     - name: Configure and build
-  #       shell: cmd
-  #       run: |
-  #         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x64
-  #         cmake -G Ninja -V ^
-  #           -DCMAKE_CXX_COMPILER_LAUNCHER=sccache ^
-  #           -DCMAKE_BUILD_TYPE=${{ matrix.config }} ^
-  #           -DLIBIGL_USE_STATIC_LIBRARY=${{ matrix.static }} ^
-  #           -DLIBIGL_WITH_CGAL=ON ^
-  #           -DLIBIGL_WITH_COMISO=OFF ^
-  #           -B build ^
-  #           -S .
-  #         cmake --build build
-
-  #     - name: Tests
-  #       run: cd build; ctest --verbose
 
