--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
+            sudo apt-get update
             sudo apt-get install \
             libblas-dev \
             libboost-filesystem-dev \
@@ -46,7 +47,7 @@ jobs:
             libglu1-mesa-dev \
             liblapack-dev \
             libmpfr-dev \
-            xorg-dev \
+            xorg-dev -fix-missing \
             ccache
       - name: Dependencies (macOS)
         if: runner.os == 'macOS'
