--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -102,7 +102,8 @@ jobs:
               libglu1-mesa-dev \
               liblapack-dev \
               libmpfr-dev \
-              xorg-dev
+              xorg-dev \
+              ccache
 
       - name: Dependencies (macOS)
         if: runner.os == 'macOS'
