--- a/.github/workflows/unix_remote.yml
+++ b/.github/workflows/unix_remote.yml
@@ -44,7 +44,8 @@ jobs:
             libboost-filesystem-dev \
             libboost-system-dev \
             libboost-thread-dev \
-            xorg-dev libglu1-mesa-dev \
+            xorg-dev \
+            libglu1-mesa-dev \
             liblapack-dev \
             libmpfr-dev \
             ccache
