Testing github actions workflow

--- a/.github/workflows/unix_remote.yml
+++ b/.github/workflows/unix_remote.yml
@@ -48,7 +48,7 @@ jobs:
               libglu1-mesa-dev \
               liblapack-dev \
               libmpfr-dev \
-              xserver-xorg-dev \
+              xorg-dev \
               ccache
 
       - name: Dependencies (macOS)
