--- a/.github/workflows/windows_local.yml
+++ b/.github/workflows/windows_local.yml
@@ -41,12 +41,12 @@ jobs:
           path: ${{ env.appdata }}\Mozilla\sccache
           key: ${{ runner.os }}-${{ matrix.config }}-${{ matrix.static }}-cache
 
-      - name: Prepare sccache
-        run: |
-          Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-          # scoop install sccache --global
-          # Scoop modifies the PATH so we make the modified PATH global.
-          echo "::set-env name=PATH::$env:PATH"
+      # - name: Prepare sccache
+      #   run: |
+      #     Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
+      #     # scoop install sccache --global
+      #     # Scoop modifies the PATH so we make the modified PATH global.
+      #     echo "::set-env name=PATH::$env:PATH"
         # We run configure + build in the same step, since they both need to call VsDevCmd
         # Also, cmd uses ^ to break commands into multiple lines (in powershell this is `)
       - name: Configure and build
