--- a/.github/workflows/unix_remote.yml
+++ b/.github/workflows/unix_remote.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         # os: [ubuntu-18.04, macos-latest]
         os: [ubuntu-18.04]
-        config: [Release]
+        config: [Release, Debug]
         static: [ON, OFF]
         include:
           # - os: macos-latest
