Testing github actions workflow

--- a/.github/workflows/unix_local.yml
+++ b/.github/workflows/unix_local.yml
@@ -15,7 +15,7 @@ jobs:
 
   Unix:
     name: Unix Local
-    runs-on: selh-hosted
+    runs-on: self-hosted
     strategy:
       fail-fast: false
     env:
