--- a/.github/workflows/unix_local.yml
+++ b/.github/workflows/unix_local.yml
@@ -26,20 +26,20 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Dependencies (Linux)
-        if: runner.os == 'Linux'
-        run: |
-            sudo apt-get update
-            sudo apt-get install \
-              libblas-dev \
-              libboost-filesystem-dev \
-              libboost-system-dev \
-              libboost-thread-dev \
-              libglu1-mesa-dev \
-              liblapack-dev \
-              libmpfr-dev \
-              xorg-dev \
-              ccache
+      # - name: Dependencies (Linux)
+      #   if: runner.os == 'Linux'
+      #   run: |
+      #       sudo apt-get update
+      #       sudo apt-get install \
+      #         libblas-dev \
+      #         libboost-filesystem-dev \
+      #         libboost-system-dev \
+      #         libboost-thread-dev \
+      #         libglu1-mesa-dev \
+      #         liblapack-dev \
+      #         libmpfr-dev \
+      #         xorg-dev \
+      #         ccache
 
       - name: Cache Build
         id: cache-build
