Testing github actions workflow

--- a/.github/workflows/windows_remote.yml
+++ b/.github/workflows/windows_remote.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [Debug]
+        config: [Debug, Release]
         static: [ON, OFF]
     steps:
       - name: Checkout repository
